Create Managed Server and Clusters